{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 29,
  "lineage": "263f3130-dbd6-1856-dc8d-6462ccbfb335",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "NAT_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03f4a6926a868f670",
            "arn": "arn:aws:ec2:us-east-1:703671920819:elastic-ip/eipalloc-03f4a6926a868f670",
            "association_id": "eipassoc-0eaf21326fbcae95a",
            "domain": "vpc",
            "id": "eipalloc-03f4a6926a868f670",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0aa0a32f76a286aa8",
            "private_dns": "ip-10-10-1-179.ec2.internal",
            "private_ip": "10.10.1.179",
            "public_dns": "ec2-100-29-97-132.compute-1.amazonaws.com",
            "public_ip": "100.29.97.132",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.TF_IGW",
            "aws_vpc.TF_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "TF_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:703671920819:internet-gateway/igw-086ff06d3c556c26f",
            "id": "igw-086ff06d3c556c26f",
            "owner_id": "703671920819",
            "vpc_id": "vpc-074056ebb764d1399"
          },
          "dependencies": [
            "aws_vpc.TF_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "TF_NATGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03f4a6926a868f670",
            "association_id": "eipassoc-0eaf21326fbcae95a",
            "connectivity_type": "public",
            "id": "nat-0f72699adf68b6649",
            "network_interface_id": "eni-0aa0a32f76a286aa8",
            "private_ip": "10.10.1.179",
            "public_ip": "100.29.97.132",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01c111ffe31629c37"
          },
          "dependencies": [
            "aws_eip.NAT_eip",
            "aws_internet_gateway.TF_IGW",
            "aws_subnet.Public1",
            "aws_vpc.TF_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "TF_Private_Route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:703671920819:route-table/rtb-0ccf045d93fa9cd68",
            "id": "rtb-0ccf045d93fa9cd68",
            "owner_id": "703671920819",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f72699adf68b6649",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-074056ebb764d1399"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.NAT_eip",
            "aws_internet_gateway.TF_IGW",
            "aws_nat_gateway.TF_NATGW",
            "aws_subnet.Public1",
            "aws_vpc.TF_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "TF_Public_Route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:703671920819:route-table/rtb-0a949f59133c15970",
            "id": "rtb-0a949f59133c15970",
            "owner_id": "703671920819",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-086ff06d3c556c26f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-074056ebb764d1399"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.TF_IGW",
            "aws_vpc.TF_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c2f52a9e6fc2a86",
            "route_table_id": "rtb-0ccf045d93fa9cd68",
            "subnet_id": "subnet-05e577fe8e8256d48"
          },
          "dependencies": [
            "aws_eip.NAT_eip",
            "aws_internet_gateway.TF_IGW",
            "aws_nat_gateway.TF_NATGW",
            "aws_route_table.TF_Private_Route",
            "aws_subnet.Private1",
            "aws_subnet.Public1",
            "aws_vpc.TF_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-002049b8ccbdf63e9",
            "route_table_id": "rtb-0ccf045d93fa9cd68",
            "subnet_id": "subnet-02a527047ac21db43"
          },
          "dependencies": [
            "aws_eip.NAT_eip",
            "aws_internet_gateway.TF_IGW",
            "aws_nat_gateway.TF_NATGW",
            "aws_route_table.TF_Private_Route",
            "aws_subnet.Private2",
            "aws_subnet.Public1",
            "aws_vpc.TF_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02115f4e0572eb9b7",
            "route_table_id": "rtb-0a949f59133c15970",
            "subnet_id": "subnet-01c111ffe31629c37"
          },
          "dependencies": [
            "aws_internet_gateway.TF_IGW",
            "aws_route_table.TF_Public_Route",
            "aws_subnet.Public1",
            "aws_vpc.TF_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e3a1da2a9b04e6fd",
            "route_table_id": "rtb-0a949f59133c15970",
            "subnet_id": "subnet-0d0fca64cf7027112"
          },
          "dependencies": [
            "aws_internet_gateway.TF_IGW",
            "aws_route_table.TF_Public_Route",
            "aws_subnet.Public2",
            "aws_vpc.TF_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "RDS_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:703671920819:security-group/sg-0a0b37eb06770ee31",
            "description": "Allows inbound MySQL traffic and allows all outbound traffic from the RDS instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a0b37eb06770ee31",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0da6016ec04662919"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "RDS_SG",
            "name_prefix": "",
            "owner_id": "703671920819",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RDS-TF-SG"
            },
            "tags_all": {
              "Name": "RDS-TF-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-074056ebb764d1399"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.apache_SG",
            "aws_vpc.TF_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "apache_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:703671920819:security-group/sg-0da6016ec04662919",
            "description": "Allow SSH, Web traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0da6016ec04662919",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "apache_SG",
            "name_prefix": "",
            "owner_id": "703671920819",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "apache-TF-SG"
            },
            "tags_all": {
              "Name": "apache-TF-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-074056ebb764d1399"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.TF_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:703671920819:subnet/subnet-05e577fe8e8256d48",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e577fe8e8256d48",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "703671920819",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 1"
            },
            "tags_all": {
              "Name": "Private Subnet 1"
            },
            "vpc_id": "vpc-074056ebb764d1399"
          },
          "dependencies": [
            "aws_vpc.TF_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:703671920819:subnet/subnet-02a527047ac21db43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a527047ac21db43",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "703671920819",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 2"
            },
            "tags_all": {
              "Name": "Private Subnet 2"
            },
            "vpc_id": "vpc-074056ebb764d1399"
          },
          "dependencies": [
            "aws_vpc.TF_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:703671920819:subnet/subnet-01c111ffe31629c37",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c111ffe31629c37",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "703671920819",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 1"
            },
            "tags_all": {
              "Name": "Public Subnet 1"
            },
            "vpc_id": "vpc-074056ebb764d1399"
          },
          "dependencies": [
            "aws_vpc.TF_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:703671920819:subnet/subnet-0d0fca64cf7027112",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d0fca64cf7027112",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "703671920819",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 2"
            },
            "tags_all": {
              "Name": "Public Subnet 2"
            },
            "vpc_id": "vpc-074056ebb764d1399"
          },
          "dependencies": [
            "aws_vpc.TF_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "TF_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:703671920819:vpc/vpc-074056ebb764d1399",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-054bbcbb7c7cd10c9",
            "default_route_table_id": "rtb-0ea97776eb813cf1c",
            "default_security_group_id": "sg-0780b2d92bcbbd21e",
            "dhcp_options_id": "dopt-085b9a8c4fddfd320",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-074056ebb764d1399",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ea97776eb813cf1c",
            "owner_id": "703671920819",
            "tags": {
              "Name": "2-tier-VPC"
            },
            "tags_all": {
              "Name": "2-tier-VPC"
            }
          }
        }
      ]
    }
  ]
}